V1.17.0 (#359)
Features

* #319 - Add EventBridge Document Events

* #338 - Enable S3 Deeplinks to Private Buckets

* #326 - Mappings: Enable MANUAL attribute mapping for KEY_ONLY (i.e., no defaultValue or defaultValues required)

* #325 - Add width and height standard metadata properties

* #261 - Add Locale API (/sites/{siteId}/locales)

* #302 - Schemas: Add minNumberOfValues/maxNumberOfValues

* Add New Endpoint to Delete All Objects in S3 (DELETE /documents/{documentId}/purge)

* #349 - CloudFormation Field to set WAF ACL for Console CloudFront

* #354 - Add logging for Websocket API Gateway

Updates

* #296 - Update runtime to Amazon Linux 2023

* #342 - When retrieving a deeplink document from S3, provide a content type reflecting "best guess" for object

* #348 - VPC template allows Enable/Disable Public Subnets

* Updated console 3.8.1

Bug Fixes

* #324 - Use contentUrl on GET /documents/{documentId}/content for text that exceeds 6MB

* #331 - Fixed error "missing attribute", when attribute already exists on document

* #332 - Changing case of path (e.g., uppercase to lowercase) results in path index losing document

* #337 - Classification Schema validation circumvented by PUT classification as stringValues

* #339 - Content-Disposition is missing UTF-8 encoding marking